--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   </head>
 
   <body>
+    <audio id="applause" src="sounds/applause.mp3"></audio>
+    <audio id="boo" src="sounds/boo.mp3"></audio>
+    <audio id="burp" src="sounds/burp.mp3"></audio>
+    <audio id="gasp" src="sounds/gasp.mp3"></audio>
+    <audio id="smooch-kiss" src="sounds/smooch-kiss.mp3"></audio>
+    <audio id="sneeze" src="sounds/sneeze.mp3"></audio>
+
+    <div id="buttons"></div>
     <script src="script.js"></script>
   </body>
 </html>
